update product page layout and product multi image support

--- a/react/src/webshop/i18n/translated/ar.json
+++ b/react/src/webshop/i18n/translated/ar.json
@@ -1842,10 +1842,37 @@
             "pay_from_voucher": "أنت تدفع من الرصيد",
             "price": "السعر:",
             "payment_option_ideal": "الدفع عبر الإنترنت (iDEAL)",
-            "payment_option_qr": "إظهار رمز الاستجابة السريعة لدى المزود",
             "payment_option_reservation": "احجز عبر الإنترنت",
             "payment_options": "خيارات الدفع",
-            "payment_option_link": "اقرأ المزيد عن خيارات الدفع"
+            "payment_option_link": "اقرأ المزيد عن خيارات الدفع",
+            "attention": "ملاحظة!",
+            "buy_now": "اشتر الآن!",
+            "choose_credit": "اختر الرصيد",
+            "collapse_section": "قسم الطي",
+            "description_card": "الوصف",
+            "dont_have_voucher": "لا يوجد رصيد بعد؟",
+            "duration_of_promotion": "مدة العرض الترويجي",
+            "expand_section": "توسيع القسم",
+            "expire_by_date": "صالحة حتى {{date}}",
+            "how_can_i_pay": "كيف يمكنني الدفع؟",
+            "locations_on_map": "المواقع على الخريطة",
+            "login_to_order": "سجّل الدخول للطلب الآن",
+            "more_info": "المزيد من المعلومات",
+            "next_image": "الصورة التالية",
+            "payment_option_qr": "إظهار رمز الاستجابة السريعة لدى المزود",
+            "payment_options_title": "خيارات الدفع",
+            "previous_image": "الصورة السابقة",
+            "price_from": "من",
+            "product_images": "صور المنتج",
+            "provider": "المزود",
+            "quantity_limit": "ماكس {{limit}} ",
+            "request_one_now": "تقدم بطلب للحصول على واحدة الآن!",
+            "show_image_of_total": "إظهار الصورة {{current}} من {{total}}",
+            "when": "عندما",
+            "where": "المكان",
+            "add_to_favorites": "إضافة إلى المفضلة",
+            "ideal_logo_alt": "شعار iDEAL",
+            "remove_from_favorites": "إزالة من المفضلة"
         },
         "low_amount": "ليس لديك رصيد ائتماني كافٍ.",
         "map": {
