--- a/react/src/webshop/i18n/translated/de.json
+++ b/react/src/webshop/i18n/translated/de.json
@@ -2263,10 +2263,37 @@
             "pay_from_voucher": "Sie zahlen aus dem Guthaben:",
             "price": "Preis:",
             "payment_option_ideal": "Online bezahlen (iDEAL)",
-            "payment_option_qr": "QR-Code beim Anbieter anzeigen",
             "payment_option_reservation": "Online buchen",
             "payment_options": "Zahlungsmöglichkeiten",
-            "payment_option_link": "Lesen Sie mehr über Zahlungsmöglichkeiten"
+            "payment_option_link": "Lesen Sie mehr über Zahlungsmöglichkeiten",
+            "attention": "Achtung!",
+            "buy_now": "Jetzt kaufen!",
+            "choose_credit": "Wählen Sie den Kredit",
+            "collapse_section": "Abschnitt Falten",
+            "description_card": "Beschreibung",
+            "dont_have_voucher": "Noch kein Kredit?",
+            "duration_of_promotion": "Dauer der Förderung",
+            "expand_section": "Abschnitt erweitern",
+            "expire_by_date": "Gültig bis {{date}}",
+            "how_can_i_pay": "Wie kann ich bezahlen?",
+            "locations_on_map": "Standorte auf der Karte",
+            "login_to_order": "Jetzt anmelden und bestellen",
+            "more_info": "Weitere Informationen",
+            "next_image": "Nächstes Bild",
+            "payment_option_qr": "QR-Code beim Anbieter anzeigen",
+            "payment_options_title": "Zahlungsmöglichkeiten",
+            "previous_image": "Vorheriges Bild",
+            "price_from": "Von",
+            "product_images": "Produktbilder",
+            "provider": "Anbieter",
+            "quantity_limit": "Max {{limit}} p.p.",
+            "request_one_now": "Bewerben Sie sich jetzt!",
+            "show_image_of_total": "Bild anzeigen {{current}} von {{total}}",
+            "when": "Wenn",
+            "where": "Wo",
+            "add_to_favorites": "Zu Favoriten hinzufügen",
+            "ideal_logo_alt": "iDEAL-Logo",
+            "remove_from_favorites": "Aus den Favoriten entfernen"
         },
         "low_amount": "Sie haben keinen Kredit mit ausreichendem Guthaben.",
         "map": {
