--- a/react/src/webshop/i18n/translated/en-US.json
+++ b/react/src/webshop/i18n/translated/en-US.json
@@ -1544,10 +1544,37 @@
             "pay_from_voucher": "You pay from the credit:",
             "price": "Price:",
             "payment_option_ideal": "Online additional payment (iDEAL)",
-            "payment_option_qr": "Show QR code at provider",
             "payment_option_reservation": "Online booking",
             "payment_options": "Payment options",
-            "payment_option_link": "Read more about payment options"
+            "payment_option_link": "Read more about payment options",
+            "attention": "Note!",
+            "buy_now": "Buy now!",
+            "choose_credit": "Choose the credit",
+            "collapse_section": "Section Collapse",
+            "description_card": "Description",
+            "dont_have_voucher": "No credit yet?",
+            "duration_of_promotion": "Duration of promotion",
+            "expand_section": "Expand section",
+            "expire_by_date": "Valid until {{date}}",
+            "how_can_i_pay": "How can I pay?",
+            "locations_on_map": "Locations on map",
+            "login_to_order": "Log in to order now",
+            "more_info": "Learn more",
+            "next_image": "Next image",
+            "payment_option_qr": "Show QR code at provider",
+            "payment_options_title": "Payment options",
+            "previous_image": "Previous image",
+            "price_from": "From",
+            "product_images": "Product Images",
+            "provider": "Provider",
+            "quantity_limit": "Max. {{limit}} p.p.",
+            "request_one_now": "Apply for one now!",
+            "show_image_of_total": "Show image {{current}} from {{total}}",
+            "when": "When",
+            "where": "Where",
+            "add_to_favorites": "Add to Favorites",
+            "ideal_logo_alt": "iDEAL logo",
+            "remove_from_favorites": "Remove from favorites"
         },
         "low_amount": "You do not have a credit with sufficient balance.",
         "map": {
