--- a/react/src/webshop/i18n/translated/fr.json
+++ b/react/src/webshop/i18n/translated/fr.json
@@ -2263,10 +2263,37 @@
             "pay_from_voucher": "Vous payez à partir du crédit :",
             "price": "Prix :",
             "payment_option_ideal": "Payer en ligne (iDEAL)",
-            "payment_option_qr": "Afficher le code QR au fournisseur",
             "payment_option_reservation": "Réserver en ligne",
             "payment_options": "Options de paiement",
-            "payment_option_link": "En savoir plus sur les options de paiement"
+            "payment_option_link": "En savoir plus sur les options de paiement",
+            "attention": "Remarque !",
+            "buy_now": "Acheter maintenant !",
+            "choose_credit": "Choisir le crédit",
+            "collapse_section": "Pliage de la section",
+            "description_card": "Description",
+            "dont_have_voucher": "Pas encore de crédit ?",
+            "duration_of_promotion": "Durée de la promotion",
+            "expand_section": "Agrandir la section",
+            "expire_by_date": "Valable jusqu'au {{date}}",
+            "how_can_i_pay": "Comment puis-je payer ?",
+            "locations_on_map": "Localisation sur la carte",
+            "login_to_order": "Se connecter pour commander",
+            "more_info": "Plus d'informations",
+            "next_image": "Image suivante",
+            "payment_option_qr": "Afficher le code QR au fournisseur",
+            "payment_options_title": "Options de paiement",
+            "previous_image": "Image précédente",
+            "price_from": "De",
+            "product_images": "Images du produit",
+            "provider": "Fournisseur",
+            "quantity_limit": "Max {{limit}} p.p.",
+            "request_one_now": "Demandez-en un dès maintenant !",
+            "show_image_of_total": "Afficher l'image {{current}} à partir de {{total}}",
+            "when": "Quand",
+            "where": "Où",
+            "add_to_favorites": "Ajouter aux favoris",
+            "ideal_logo_alt": "Logo iDEAL",
+            "remove_from_favorites": "Supprimer des favoris"
         },
         "low_amount": "Vous n'avez pas de crédit avec un solde suffisant.",
         "map": {
