--- a/react/src/webshop/i18n/translated/pl.json
+++ b/react/src/webshop/i18n/translated/pl.json
@@ -2263,10 +2263,37 @@
             "pay_from_voucher": "Płacisz z kredytu:",
             "price": "Cena:",
             "payment_option_ideal": "Płatność online (iDEAL)",
-            "payment_option_qr": "Pokaż kod QR u dostawcy",
             "payment_option_reservation": "Zarezerwuj online",
             "payment_options": "Opcje płatności",
-            "payment_option_link": "Więcej informacji o opcjach płatności"
+            "payment_option_link": "Więcej informacji o opcjach płatności",
+            "attention": "Uwaga!",
+            "buy_now": "Kup teraz!",
+            "choose_credit": "Wybierz kredyt",
+            "collapse_section": "Składanie sekcji",
+            "description_card": "Opis",
+            "dont_have_voucher": "Nie masz jeszcze kredytu?",
+            "duration_of_promotion": "Czas trwania promocji",
+            "expand_section": "Rozwiń sekcję",
+            "expire_by_date": "Ważne do {{date}}",
+            "how_can_i_pay": "Jak mogę zapłacić?",
+            "locations_on_map": "Lokalizacje na mapie",
+            "login_to_order": "Zaloguj się, aby zamówić teraz",
+            "more_info": "Więcej informacji",
+            "next_image": "Następny obraz",
+            "payment_option_qr": "Pokaż kod QR u dostawcy",
+            "payment_options_title": "Opcje płatności",
+            "previous_image": "Poprzedni obraz",
+            "price_from": "Od",
+            "product_images": "Zdjęcia produktów",
+            "provider": "Dostawca",
+            "quantity_limit": "Max {{limit}} p.p.",
+            "request_one_now": "Złóż wniosek już teraz!",
+            "show_image_of_total": "Pokaż obraz {{current}} z {{total}}",
+            "when": "Kiedy",
+            "where": "Gdzie",
+            "add_to_favorites": "Dodaj do ulubionych",
+            "ideal_logo_alt": "Logo iDEAL",
+            "remove_from_favorites": "Usuń z ulubionych"
         },
         "low_amount": "Nie masz kredytu z wystarczającym saldem.",
         "map": {
