--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -2263,10 +2263,37 @@
             "pay_from_voucher": "Вы платите из кредита:",
             "price": "Цена:",
             "payment_option_ideal": "Оплатить онлайн (iDEAL)",
-            "payment_option_qr": "Показать QR-код у провайдера",
             "payment_option_reservation": "Забронировать онлайн",
             "payment_options": "Варианты оплаты",
-            "payment_option_link": "Подробнее о вариантах оплаты"
+            "payment_option_link": "Подробнее о вариантах оплаты",
+            "attention": "Обратите внимание!",
+            "buy_now": "Купить сейчас!",
+            "choose_credit": "Выберите кредит",
+            "collapse_section": "Складывание секций",
+            "description_card": "Описание",
+            "dont_have_voucher": "Еще нет кредита?",
+            "duration_of_promotion": "Продолжительность акции",
+            "expand_section": "Развернуть раздел",
+            "expire_by_date": "Действует до {{date}}",
+            "how_can_i_pay": "Как я могу заплатить?",
+            "locations_on_map": "Места на карте",
+            "login_to_order": "Войдите, чтобы заказать сейчас",
+            "more_info": "Дополнительная информация",
+            "next_image": "Следующее изображение",
+            "payment_option_qr": "Показать QR-код у провайдера",
+            "payment_options_title": "Варианты оплаты",
+            "previous_image": "Предыдущее изображение",
+            "price_from": "С сайта",
+            "product_images": "Изображения продуктов",
+            "provider": "Поставщик",
+            "quantity_limit": "Макс {{limit}} p.p.",
+            "request_one_now": "Подайте заявку прямо сейчас!",
+            "show_image_of_total": "Показать изображение {{current}} из {{total}}",
+            "when": "Когда",
+            "where": "Где",
+            "add_to_favorites": "Добавить в избранное",
+            "ideal_logo_alt": "Логотип iDEAL",
+            "remove_from_favorites": "Удалить из избранного"
         },
         "low_amount": "У вас нет кредита с достаточным балансом.",
         "map": {
