--- a/react/src/webshop/i18n/translated/tr.json
+++ b/react/src/webshop/i18n/translated/tr.json
@@ -1842,10 +1842,37 @@
             "pay_from_voucher": "Krediden ödeme yaparsınız:",
             "price": "Fiyat:",
             "payment_option_ideal": "Online ödeme (iDEAL)",
-            "payment_option_qr": "QR kodunu sağlayıcıda göster",
             "payment_option_reservation": "Online rezervasyon",
             "payment_options": "Ödeme seçenekleri",
-            "payment_option_link": "Ödeme seçenekleri hakkında daha fazla bilgi edinin"
+            "payment_option_link": "Ödeme seçenekleri hakkında daha fazla bilgi edinin",
+            "attention": "Dikkat!",
+            "buy_now": "Şimdi satın al!",
+            "choose_credit": "Krediyi seçin",
+            "collapse_section": "Bölüm katlama",
+            "description_card": "Açıklama",
+            "dont_have_voucher": "Henüz kredi yok mu?",
+            "duration_of_promotion": "Promosyon süresi",
+            "expand_section": "Bölümü genişlet",
+            "expire_by_date": "Şu tarihe kadar geçerlidir {{date}}",
+            "how_can_i_pay": "Nasıl ödeme yapabilirim?",
+            "locations_on_map": "Harita üzerindeki konumlar",
+            "login_to_order": "Şimdi sipariş vermek için giriş yapın",
+            "more_info": "Daha fazla bilgi",
+            "next_image": "Sonraki resim",
+            "payment_option_qr": "QR kodunu sağlayıcıda göster",
+            "payment_options_title": "Ödeme seçenekleri",
+            "previous_image": "Önceki resim",
+            "price_from": "Kimden",
+            "product_images": "Ürün görselleri",
+            "provider": "Sağlayıcı",
+            "quantity_limit": "Max {{limit}} p.p.",
+            "request_one_now": "Şimdi bir tane için başvurun!",
+            "show_image_of_total": "{{current}} adresinden görüntü göster {{total}}",
+            "when": "Ne zaman",
+            "where": "Nerede",
+            "add_to_favorites": "Favorilere ekle",
+            "ideal_logo_alt": "iDEAL logosu",
+            "remove_from_favorites": "Sık kullanılanlardan kaldır"
         },
         "low_amount": "Yeterli bakiyeye sahip krediniz yok.",
         "map": {
