--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -2263,10 +2263,37 @@
             "pay_from_voucher": "Ви платите з кредиту:",
             "price": "Ціна:",
             "payment_option_ideal": "Сплачуйте онлайн (iDEAL)",
-            "payment_option_qr": "Показати QR-код у постачальника",
             "payment_option_reservation": "Бронюйте онлайн",
             "payment_options": "Варіанти оплати",
-            "payment_option_link": "Дізнайтеся більше про способи оплати"
+            "payment_option_link": "Дізнайтеся більше про способи оплати",
+            "attention": "Зауважте!",
+            "buy_now": "Купуйте зараз!",
+            "choose_credit": "Виберіть кредит",
+            "collapse_section": "Складання секцій",
+            "description_card": "Опис",
+            "dont_have_voucher": "Кредиту ще немає?",
+            "duration_of_promotion": "Тривалість акції",
+            "expand_section": "Розгорнути розділ",
+            "expire_by_date": "Дійсно до {{date}}",
+            "how_can_i_pay": "Як я можу заплатити?",
+            "locations_on_map": "Розташування на карті",
+            "login_to_order": "Увійдіть, щоб замовити зараз",
+            "more_info": "Більше інформації",
+            "next_image": "Наступне зображення",
+            "payment_option_qr": "Показати QR-код у постачальника",
+            "payment_options_title": "Варіанти оплати",
+            "previous_image": "Попереднє зображення",
+            "price_from": "Від",
+            "product_images": "Зображення продукції",
+            "provider": "Провайдер",
+            "quantity_limit": "Макс {{limit}} п.п.",
+            "request_one_now": "Подайте заявку зараз!",
+            "show_image_of_total": "Показати зображення {{current}} від {{total}}",
+            "when": "Коли",
+            "where": "Де",
+            "add_to_favorites": "Додати в обране Обране",
+            "ideal_logo_alt": "Логотип iDEAL",
+            "remove_from_favorites": "Видалити з обраного"
         },
         "low_amount": "У вас немає кредиту з достатнім балансом.",
         "map": {
