--- a/react/src/webshop/i18n/translated/pl.json
+++ b/react/src/webshop/i18n/translated/pl.json
@@ -2825,11 +2825,11 @@
             "all_providers": "Wybierz dostawcę...",
             "all_sub_categories": "Wybierz podkategorię...",
             "category": "Kategoria",
-            "found_for": "{{ query }}znaleziono dla \" \"",
             "funds": "Kredyt",
             "highlighted": "Polecane",
             "providers": "Dostawcy",
-            "sort": "Sortuj"
+            "sort": "Sortuj",
+            "found_for": "Wyniki wyszukiwania dla \"{{ query }}\""
         },
         "sort_by": {
             "created_at_asc": "Najstarszy pierwszy",
