--- a/react/src/webshop/i18n/translated/de.json
+++ b/react/src/webshop/i18n/translated/de.json
@@ -2825,11 +2825,11 @@
             "all_providers": "Anbieter auswählen...",
             "all_sub_categories": "Unterkategorie auswählen...",
             "category": "Kategorie",
-            "found_for": "{{ query }}gefunden für \" \"",
             "funds": "Kredit",
             "highlighted": "Ausgewählt",
             "providers": "Anbieter",
-            "sort": "Sortieren"
+            "sort": "Sortieren",
+            "found_for": "Suchergebnisse gefunden für \"{{ query }}\""
         },
         "sort_by": {
             "created_at_asc": "Älteste zuerst",
