--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -2825,11 +2825,11 @@
             "all_providers": "Выберите поставщика...",
             "all_sub_categories": "Выберите подкатегорию...",
             "category": "Категория",
-            "found_for": "{{ query }}найдено для \" \"",
             "funds": "Кредит",
             "highlighted": "Featured",
             "providers": "Провайдеры",
-            "sort": "Сортировать"
+            "sort": "Сортировать",
+            "found_for": "Результаты поиска, найденные для \"{{ query }}\""
         },
         "sort_by": {
             "created_at_asc": "Самый старый первый",
