--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -2825,11 +2825,11 @@
             "all_providers": "Виберіть провайдера...",
             "all_sub_categories": "Виберіть підкатегорію...",
             "category": "Категорія",
-            "found_for": "{{ query }}знайдено для \" \"",
             "funds": "Кредит",
             "highlighted": "Особливості",
             "providers": "Провайдери",
-            "sort": "Сортування"
+            "sort": "Сортування",
+            "found_for": "Результати пошуку, знайдені для \"{{ query }}\""
         },
         "sort_by": {
             "created_at_asc": "Найстарший перший",
