--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -2829,7 +2829,8 @@
             "highlighted": "Особливості",
             "providers": "Провайдери",
             "sort": "Сортування",
-            "found_for": "Результати пошуку, знайдені для \"{{ query }}\""
+            "found_for": "Результати пошуку, знайдені для \"{{ query }}\"",
+            "search": "Пошук"
         },
         "sort_by": {
             "created_at_asc": "Найстарший перший",
