--- a/react/src/webshop/i18n/translated/fr.json
+++ b/react/src/webshop/i18n/translated/fr.json
@@ -2829,7 +2829,8 @@
             "highlighted": "En vedette",
             "providers": "Fournisseurs",
             "sort": "Trier",
-            "found_for": "Résultats de la recherche pour \"{{ query }}\""
+            "found_for": "Résultats de la recherche pour \"{{ query }}\"",
+            "search": "Recherche"
         },
         "sort_by": {
             "created_at_asc": "Le plus vieux d'abord",
