--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -1524,12 +1524,12 @@
                 "title": "Заблокуйте свій пропуск"
             },
             "link_card": {
-                "description": "<br/><br/>На перепустці є QR-код, нижче - ваш особистий код. Якщо ви активуєте стару перепустку, ви можете продовжувати нею користуватися. Потрібна допомога?  Телефонуйте за номером 14 050 з понеділка по п'ятницю з 9.00 до 12.00.",
                 "subtitle": "Введіть свій персональний код клієнта",
                 "title": "Активуйте стару перепустку",
                 "alt_text": "Фізичний пропуск: {{ fund_name }}",
                 "no_old_card": "Старої перепустки немає?",
-                "order_card": "Замовити перепустку"
+                "order_card": "Замовити перепустку",
+                "description": "На вашій перепустці є персональний код. Введіть його нижче.<br/>Якщо ви повторно активуєте стару перепустку, ви зможете продовжувати нею користуватися."
             },
             "request_card_success": {
                 "description": "Ви отримали електронний лист з підтвердженням вашого замовлення.",
@@ -1849,7 +1849,6 @@
         "preferences-notifications": "Налаштування сповіщень{{pageTitleSuffix}}",
         "privacy": "Заява про конфіденційність{{pageTitleSuffix}}",
         "product": "{{product_name}} Пропозиція - від {{organization_name}}{{pageTitleSuffix}}",
-        "products": "Пропозиція{{fund_name}}{{pageTitleSuffix}}",
         "products-apply": "Пропозиція купівлі{{pageTitleSuffix}}",
         "products-show": "Пропозиція{{pageTitleSuffix}}",
         "provider": "Провайдер - {{provider_name}}{{pageTitleSuffix}}",
@@ -1874,7 +1873,8 @@
         "start": "Почніть входити в систему{{pageTitleSuffix}}",
         "terms_and_conditions": "Загальні положення та умови{{pageTitleSuffix}}",
         "voucher": "Твоя заслуга - {{fund_name}}{{pageTitleSuffix}}",
-        "vouchers": "Моя заслуга{{pageTitleSuffix}}"
+        "vouchers": "Моя заслуга{{pageTitleSuffix}}",
+        "products": "Пропозиція{{pageTitleSuffix}}"
     },
     "page_title": "Платформа Forus",
     "paginator": {
@@ -2295,7 +2295,6 @@
             "payment_option_qr": "Показати QR-код у постачальника",
             "payment_options_title": "Варіанти оплати",
             "previous_image": "Попереднє зображення",
-            "price_from": "Від",
             "product_images": "Зображення продукції",
             "provider": "Провайдер",
             "quantity_limit": "Макс {{limit}} п.п.",
@@ -2322,7 +2321,8 @@
         "price": {
             "free": "Безкоштовно",
             "informational": "Тільки в магазині"
-        }
+        },
+        "other_products": "Можливо, вам також сподобається це?"
     },
     "products": {
         "breadcrumbs": {
